--- a/DOM-JS/01/index.html
+++ b/DOM-JS/01/index.html
@@ -131,7 +131,20 @@
             </div>
         </div>
     </section>
-    <h3>Browser object model</h3>
+    <h3 style="width: 2000px;">Browser object model</h3>
+    <br><br>
+    <br><br>
+    <button id="abrir-ventana">Abrir Ventana</button>
+    <br><br>
+    <br><br>
+    <button id="cerrar-ventana">Cerrar ventana</button>
+    <br><br>
+    <br><br>
+    <button id="imprimir-ventana">Imprimir ventana</button>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
     <script src="/DOM-JS/01/index.js"></script>
 </body>
 </html>
